Improve AMI result UI and compat indexing